# arcanea-ai-app

./: .arcanea-learning.json  .arcanea-library-cache.json  .cursorrules  .editorconfig  .env.checklist.md  .env.example  .env.mvp.example  .eslintrc.json  .gitignore  .mcp.json.example  .nano-banana-config.json  AGENTS.md  ARCANEA_AGENTHUB_MASTER_PLAN.md  ARCANEA_COMMAND_CENTER.html  ARCANEA_ONCHAIN_RESEARCH.html  ARCANEA_VOICE_NARRATIVE_BIBLE.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_FIXES_REPORT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  CROSS-REPO-STATUS.md  DEMO_v4.js  DOCS_MAP.md  INTEGRATION_REPORT.html  INTEGRATION_REPORT.json  LORE.md  PREMIUM_UI_DEMO.html  PROMPT_BOOKS_DEMO.html  QUICK-CLEANUP.bat  QUICK_REFERENCE.md  README.md  SECURITY.md  SESSION-REPORT-20260310.md  UPGRADE_SUMMARY.md  arcanea-agents-live.js  arcanea-auth-ui.html  arcanea-auth.js  arcanea-cli.js  (+97 more)
.arcanea/: AGENT.md  CLAUDE.md  MASTER_PLAN.md  SESSION_LOG.md  config.json
.changeset/: README.md  config.json
.claude/: AGENT_AUTO_INSTRUCTIONS.md  AGENT_WORKFLOW.md  AIOS_CONTINUATION_PLAN.md  AIOS_V2_STRATEGY.md  AIOS_V3_FINAL.md  AIOS_V3_SIMPLIFIED.md  AIOS_V3_USER_CENTERED.md  AMIRI_VECTOR_INTEGRATION_MAP.md  ARCANEA_ETHICAL_GAMIFICATION_FRAMEWORK.md  ARCANEA_EVALUATION_SUMMARY.md  ARCANEA_INTELLIGENCE_OS.md  ARCANEA_INTELLIGENCE_OS_STRATEGY.md  ARCANEA_MCP_EVOLUTION_V2.md  (+30 more)
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-plugin/: marketplace.json  plugin.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
(+3973 files in other folders)
